--- a/recipes/mender-client/debian-master/control
+++ b/recipes/mender-client/debian-master/control
@@ -12,7 +12,7 @@ Conflicts: mender
 Architecture: any
 Depends: mender-auth, mender-update
 # debian buster Depends: mender-auth, mender-update
-Suggests: mender-setup, mender-snapshot
+Recommends: mender-flash, mender-setup, mender-snapshot
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
 
@@ -21,6 +21,7 @@ Conflicts: mender
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 # debian buster Depends: libarchive13 (>= 3.3.3), libc6 (>= 2.28), libdbus-1-3 (>= 1.9.14), libgcc1 (>= 1:3.5), liblmdb0 (>= 0.9.7), libssl1.1 (>= 1.1.1), libstdc++6 (>= 7)
+Recommends: mender-flash, mender-setup
 Description: Mender update
  Mender-update is an open source over-the-air (OTA) software updater for embedded Linux devices.
 
@@ -29,6 +30,7 @@ Conflicts: mender
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 # debian buster Depends: libc6 (>= 2.28), libdbus-1-3 (>= 1.9.14), libgcc1 (>= 1:3.5), libssl1.1 (>= 1.1.1), libstdc++6 (>= 7)
+Recommends: mender-setup
 Description: Mender auth
  Mender-auth enables centralized authentication against a Mender server.
 
