fix: `mender-flash` should not depend on anything
It is an standalone tool.

Changelog: None
Ticket: None

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-flash/debian-master/control
+++ b/recipes/mender-flash/debian-master/control
@@ -9,6 +9,6 @@ Homepage: https://mender.io
 
 Package: mender-flash
 Architecture: any
-Depends: mender-update, ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Mender Flash is an utility to flash block devices used by the Mender Client
  to write into the inactive partition during a rootfs update.
