--- a/recipes/mender-client/debian-3.5.x/control
+++ b/recipes/mender-client/debian-3.5.x/control
@@ -6,7 +6,9 @@ Standards-Version: 3.9.2
 Build-Depends: debhelper (>= 9)
 
 Package: mender-client
-Conflicts: mender
+Conflicts: mender, mender-auth, mender-update, mender-snapshot, mender-setup
+Replaces: mender-auth, mender-update, mender-snapshot, mender-setup
+Provides: mender-auth, mender-update, mender-snapshot, mender-setup
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 # debian bullseye Depends: libc6 (>= 2.14), libglib2.0-0 (>= 2.26.0), liblzma5 (>= 5.1.1alpha+20120614), libssl1.1 (>= 1.1.1)
