chore: Fix `Depends` metadata for the Mender addons
Besides `mender-client`, they need to accept also either `mender-auth`
or `mender-update` as a replacement.

Note that `mender-connect` was correct, we are only re-ordering it for
consistency with the rest.

Ticket: MEN-7010

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-configure/debian-master/control
+++ b/recipes/mender-configure/debian-master/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9)
 
 Package: mender-configure
 Architecture: all
-Depends: dbus, curl, mender-client (>=2.5.0), ${misc:Depends}
+Depends: dbus, curl, mender-update | mender-client (>=2.5.0), ${misc:Depends}
 Description: Mender Configure
  Mender Configure is a Mender add-on which enhances the Mender Client providing an Update
  Module to configure the device
