--- a/recipes/mender-connect/debian-master/control
+++ b/recipes/mender-connect/debian-master/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9)
 
 Package: mender-connect
 Architecture: any
-Depends: mender-client (>3.2.0) | mender-auth, ${shlibs:Depends}, ${misc:Depends}
+Depends: mender-auth | mender-client (>3.2.0), ${shlibs:Depends}, ${misc:Depends}
 # debian bullseye Depends: mender-client (>3.2.0) | mender-auth, libc6 (>= 2.3.2), libglib2.0-0 (>= 2.26.0)
 # debian buster Depends: mender-client (>3.2.0) | mender-auth, libc6 (>= 2.3.2), libglib2.0-0 (>= 2.26.0)
 Description: Mender Connect
