--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ build:packages:
   stage: build:packages
   image: docker:git
   tags:
-    - mender-qa-worker-generic
+    - hetzner-amd-beefy
   services:
     - docker:dind
   before_script:
