fix: Missing `Depends` field for `mender-client4` armhf
When cross-compiling on armhf, we use a _hack_ to set the dependencies.
If in use, it needs to be set for every package in the `control` file.

The test was passing by mistake.

Changelog: None
Ticket: MEN-7048

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-client4/debian-master/control
+++ b/recipes/mender-client4/debian-master/control
@@ -12,6 +12,7 @@ Conflicts: mender, mender-client
 Replaces: mender-client, mender-auth, mender-update, mender-snapshot, mender-setup
 Architecture: any
 Depends: mender-auth, mender-update, mender-snapshot, mender-setup, mender-flash
+# debian buster Depends: mender-auth, mender-update, mender-snapshot, mender-setup, mender-flash
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
 
