--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,8 +127,8 @@ build:packages:
   image: docker:git
   tags:
     - hetzner-amd-beefy
-      #services:
-      #  - docker:dind
+  services:
+    - docker:dind
   before_script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
   script:
