chore: Made docker-build-package and mender-deb-package compatible with arm image
Added platform to the docker run command that specifies armv6 if
architecture is armhf.

Updated the mender-deb-package to use the same build process for armhf as for
native builds (using an image emulating armhf). See following PR:
https://github.com/mendersoftware/mender-test-containers/pull/514

Note: set the variable IMAGE_VERSION and the image tag to
"feature-armhf-native". This should be changed to "master" if the
branch gets merged to master.

Ticket: MEN-6875

Signed-off-by: Daniel Skinstad Drabitzius <daniel.drabitzius@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,8 @@ variables:
   # Workaround for GitLab intermittent networking
   FF_NETWORK_PER_BUILD: 1
   # Builder image version
-  IMAGE_VERSION: "master"
+  # Use the images created in the mender-test-containers feature branch
+  IMAGE_VERSION: "feature-armhf-native"
   # Debian suffix
   OVERRIDE_DEBIAN_SUFFIX:
     value: ""
@@ -126,7 +127,7 @@ build:packages:
   stage: build:packages
   image: docker:git
   tags:
-    - mender-qa-worker-generic
+    - hetzner-amd-beefy
   services:
     - docker:dind
   before_script:
