--- a/recipes/mender-client4/debian-master/rules
+++ b/recipes/mender-client4/debian-master/rules
@@ -4,7 +4,7 @@
 	dh $@ --with systemd
 
 override_dh_auto_configure:
-	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release
+	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release -D BUILD_TESTS=OFF
 
 override_dh_auto_test:
 	true
