--- a/recipes/mender-connect/debian-1.0.x/rules
+++ b/recipes/mender-connect/debian-1.0.x/rules
@@ -2,6 +2,8 @@
 
 %:
 	dh $@
+override_dh_auto_configure:
+	dh_auto_configure -- -D BUILD_TESTS=OFF
 
 override_dh_auto_build:
 	make CGO_CFLAGS="${CGO_CFLAGS}" CGO_LDFLAGS="${CGO_LDFLAGS}" CC="${CC}" \
