--- a/recipes/mender-setup/debian-master/rules
+++ b/recipes/mender-setup/debian-master/rules
@@ -3,6 +3,9 @@
 %:
 	dh $@
 
+override_dh_auto_configure:
+	dh_auto_configure -- -D BUILD_TESTS=OFF
+
 override_dh_auto_install:
 	DESTDIR=debian/mender-setup make install
 
