ci: Build all packages for Debian Bookworm distribution
Ticket: MEN-6532

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ variables:
   parallel:
     matrix:
       - DISTRO: debian
-        RELEASE: [buster, bullseye]
+        RELEASE: [buster, bullseye, bookworm]
         ARCH: [amd64, armhf, arm64]
       - DISTRO: ubuntu
         RELEASE: [focal, jammy]
