--- a/recipes/mender-flash/debian-master/rules
+++ b/recipes/mender-flash/debian-master/rules
@@ -6,7 +6,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release -D BOOST_ALL_DYN_LINK=ON -D BUILD_TESTS=OFF
+	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release -D BUILD_TESTS=OFF
 
 override_dh_auto_test:
 	true
