build: Fix build `mender-flash` 1.0.x build for Debian Bookworm
Debian helpers for Bookworm enable `FETCHCONTENT_FULLY_DISCONNECTED`,
which is by itself a good practice, but this in turn breaks our existing
1.0.x releases where we rely on downloading (with no option to disable)
Google Test. This is fixed in master with the `BUILD_TESTS` option.

Ticket: MEN-6532

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-flash/debian-1.0.x/rules
+++ b/recipes/mender-flash/debian-1.0.x/rules
@@ -6,7 +6,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release
+	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release -D FETCHCONTENT_FULLY_DISCONNECTED=OFF
 
 override_dh_auto_test:
 	true
