chore: Update test framework to run on Debian Bullseye
Start testing `bullseye` packages, together with upgrading the test
framework. See related PR:
* https://github.com/mendersoftware/mender-test-containers/pull/581

Use also this distribution for the orig tarballs.

The following comes from the `dependabot` commit:

bump tests/mender_test_containers from `2e03bdd` to `18d4e1f`

Bumps [tests/mender_test_containers](https://github.com/mendersoftware/mender-test-containers) from `2e03bdd` to `18d4e1f`.
- [Commits](https://github.com/mendersoftware/mender-test-containers/compare/2e03bdd9bd828c8721eea7c63cf9600529f6ac82...18d4e1f34ba9e062d993b885615ae39504f23bd6)

---
updated-dependencies:
- dependency-name: tests/mender_test_containers
  dependency-type: direct:production
...

Ticket: QA-691

Signed-off-by: dependabot[bot] <support@github.com>
Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,7 +100,7 @@ stages:
   - test
   - publish
 
-build:orig:debian:buster:amd64:
+build:orig:debian:bullseye:amd64:
   stage: build:orig
   rules:
     - if: $CI_COMMIT_BRANCH == "production"
@@ -113,7 +113,7 @@ build:orig:debian:buster:amd64:
     - docker:dind
   variables:
     DISTRO: "debian"
-    RELEASE: "buster"
+    RELEASE: "bullseye"
     ARCH: "amd64"
   before_script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
@@ -199,10 +199,10 @@ test:check-python3-formatting:
   tags:
     - mender-qa-worker-generic
   needs:
-    # Note that we are only testing packages from Debian buster
-    - "build:packages: [debian, buster, amd64]"
-    - "build:packages: [debian, buster, armhf]"
-    - "build:packages: [debian, buster, arm64]"
+    # Note that we are only testing packages from Debian bullseye
+    - "build:packages: [debian, bullseye, amd64]"
+    - "build:packages:armhf: [debian, bullseye, armhf]"
+    - "build:packages: [debian, bullseye, arm64]"
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   before_script:
@@ -233,7 +233,7 @@ test:check-python3-formatting:
     - pip3 install --break-system-packages -r tests/requirements.txt
   script:
     - cd tests
-    - REFERENCE_DIST=debian-buster-amd64
+    - REFERENCE_DIST=debian-bullseye-amd64
     - |-
         commercial_tests_flags=""
         if [ -f ${CI_PROJECT_DIR}/output/commercial/${REFERENCE_DIST}/mender-gateway-deb-version ] &&
