--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,11 +68,8 @@ variables:
   parallel:
     matrix:
       - DISTRO: debian
-        RELEASE: [buster, bullseye, bookworm]
+        RELEASE: [bullseye, bookworm]
         ARCH: [amd64, arm64]
-      - DISTRO: debian # cannot build this with arm64 host
-        RELEASE: [buster]
-        ARCH: [amd64, armhf, arm64]
       - DISTRO: ubuntu
         RELEASE: [focal, jammy]
         ARCH: [amd64, armhf, arm64]
