ci: Version pin docker to 26-cli/26-dind
The `git` docker tag is discontinued at major version 25 which creates a
growing version skew between the server and client. Docker 27.0 seems to
have a regression when running docker in docker rootless:
https://github.com/moby/moby/issues/48064

Signed-off-by: Alf-Rune Siqveland <alf.rune@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,11 +103,11 @@ build:orig:debian:bullseye:amd64:
     - if: $CI_COMMIT_BRANCH == "production"
       when: never
     - when: on_success
-  image: docker:git
+  image: docker:26-cli
   tags:
     - mender-qa-worker-generic
   services:
-    - docker:dind
+    - docker:26-dind
   variables:
     DISTRO: "debian"
     RELEASE: "bullseye"
@@ -139,11 +139,11 @@ build:packages:
     - if: $CI_COMMIT_BRANCH == "production"
       when: never
     - when: on_success
-  image: docker:git
+  image: docker:26-cli
   tags:
     - hetzner-amd-beefy
   services:
-    - docker:dind
+    - docker:26-dind
   before_script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
   script:
