--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ variables:
         RELEASE: [bullseye, bookworm]
         ARCH: [amd64, arm64]
       - DISTRO: ubuntu
-        RELEASE: [focal, jammy]
+        RELEASE: [focal, jammy, noble]
         ARCH: [amd64, armhf, arm64]
 
 .mender-dist-packages-image-matrix-armhf:
